--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="pg-home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>  
+            <a href="pg-home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Logo Home"></a> 
+            <br>
+            <a href="pg-youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Logo Youtube"></a> 
+            <br>
+            <a href="pg-github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Logo Github"></a> 
+            <br>
+            <a href="pg-instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Logo Instagram"></a> 
+            <br>
+            <a href="pg-twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a>
+            <br>
+            <a href="pg-facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a>  <br>
+            <a href="http://www.arcus.com.br/" target="tela"><img src="imagens/Logo Google.jpg" alt="Logo ARCUS"></a> 
         </section>
     </main>
 </body>
