--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <br>
             <a href="pg-twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a>
             <br>
-            <a href="pg-facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a>  <br>
+            <a href="pg-facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a>
+            <br>
             <a href="http://www.arcus.com.br/" target="tela"><img src="imagens/Logo Google.jpg" alt="Logo ARCUS"></a> 
         </section>
     </main>
